--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -11,5 +11,4 @@ api_platform:
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
-        extra_properties:
-            standard_put: true
+        pagination_items_per_page: 10
