--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpmd/phpmd": "^2.14",
         "phpstan/phpdoc-parser": "^1.24",
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
@@ -39,6 +42,7 @@
         "symfony/serializer": "6.3.*",
         "symfony/string": "6.3.*",
         "symfony/translation": "6.3.*",
+        "symfony/twig-bridge": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
