feat: file upload with vich uploader

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,8 +45,8 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
 #        todo: remettre en place l'accès controlé
-#        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api,       roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+#        - { path: ^/api,       roles: PUBLIC_ACCESS }
 
 when@test:
     security:
